--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,6 +17,13 @@
         </p>
         <p><a class="btn btn-default" href="https://business.ohio.edu/academics/undergrad-majors/management-information-systems/">Learn more about MIS &raquo;</a></p>
         <p><a class="btn btn-default" href="https://business.ohio.edu/academics/undergrad-majors/business-analytics/">Learn more about business analytics &raquo;</a></p>
+        <br />
+        @Html.ActionLink("Students", "Index", "Students")
+        <br />
+        @Html.ActionLink("Classes", "Index", "Classes")
+        <br />
+        @Html.ActionLink("Teachers", "Index", "Teachers")
+        <br />
     </div>
     <div class="col-md-4">
         <h2>Study Abroad</h2>
