--- a/Views/Teachers/Create.cshtml
+++ b/Views/Teachers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model jw537414_MIS_plswrk.Models.Teacher
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create New Teacher";
 }
 
 <h2>Create</h2>
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Teacher</h4>
+        <h4>Create new teacher for the 2019 - 2020 school year.</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
