--- a/Views/Classes/Delete.cshtml
+++ b/Views/Classes/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Class</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Class</h4>
+    <h4>Students and teachers will no longer be enrolled if deleted.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
