--- a/Views/Classes/Details.cshtml
+++ b/Views/Classes/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Class Details</h2>
 
 <div>
-    <h4>Class</h4>
+    <h4>Class name and details.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
