--- a/Views/Students/Delete.cshtml
+++ b/Views/Students/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Student</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Student</h4>
+    <h4>Deleting a student means they will no longer be enrolled for the 2019 - 2020 school year.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
