--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Student Details</h2>
 
 <div>
-    <h4>Student</h4>
+    <h4>Students infomation.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
