--- a/Views/Teachers/Delete.cshtml
+++ b/Views/Teachers/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Teacher</h4>
+    <h4>Deleting a teacher means they will no longer be enrolled for the 2019 - 2020 school year.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
