--- a/Views/Teachers/Details.cshtml
+++ b/Views/Teachers/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Teacher Details</h2>
 
 <div>
-    <h4>Teacher</h4>
+    <h4>Teacher infomation.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
