--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,40 +2,40 @@
     ViewBag.Title = "Home";
 }
 
-<div class="jumbotron">
-    <h1>Jenna Weaver</h1>
-    <p class="lead">| Ohio University | Management Information System | Business Analytics |</p></p>
-    
+<div class="jumbotron"; style="background-color:mediumseagreen;">
+    <center>
+        <h1>Jenna Weaver</h1></center>
+    <center><p class="lead">| Ohio University | Management Information System | Business Analytics |</p></p></center>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Major</h2>
+        <h2 style="color:mediumseagreen;">Major</h2>
         <p>
             To learn more about my majors, Management Information Systems and Business Analytics, check out Ohio University's summary
             and what the program offers.
         </p>
-        <p><a class="btn btn-default" href="https://business.ohio.edu/academics/undergrad-majors/management-information-systems/">Learn more about MIS &raquo;</a></p>
-        <p><a class="btn btn-default" href="https://business.ohio.edu/academics/undergrad-majors/business-analytics/">Learn more about business analytics &raquo;</a></p>
+        <p><a class="btn btn-info" href="https://business.ohio.edu/academics/undergrad-majors/management-information-systems/">Learn more about MIS &raquo;</a></p>
+        <p><a class="btn btn-info" href="https://business.ohio.edu/academics/undergrad-majors/business-analytics/">Learn more about business analytics &raquo;</a></p>
         <br />
-        @Html.ActionLink("Students", "Index", "Students")
+        <button type="button" class="btn Warning">@Html.ActionLink("Students", "Index", "Students")</button>  <span class="badge">4</span>
         <br />
-        @Html.ActionLink("Classes", "Index", "Classes")
+        <button type="button" class="btn Warning">@Html.ActionLink("Classes", "Index", "Classes")</button> <span class="badge">7</span>
         <br />
-        @Html.ActionLink("Teachers", "Index", "Teachers")
+        <button type="button" class="btn Warning">@Html.ActionLink("Teachers", "Index", "Teachers")</button> <span class="badge">5</span>
         <br />
-    </div>
+</div>
     <div class="col-md-4">
-        <h2>Study Abroad</h2>
+        <h2 style="color:mediumseagreen;">Study Abroad</h2>
         <p>
             I studied aroad spring semester of my sophmore year. While abroad I studied at Mahidol International College in Bangkok, Thialand.
             Check out their link to view more about the university I studied at!
         </p>
-        <p><a class="btn btn-default" href="https://mahidol.ac.th/">Learn more about Mahidol &raquo;</a></p>
+        <p><a class="btn btn-info" href="https://mahidol.ac.th/">Learn more about Mahidol &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Linkedin</h2>
+        <h2 style="color:mediumseagreen;">Linkedin</h2>
         <p>Check out the link to my Linkedin to view more about my achedemics and internships I completed during my time as a student.</p>
-        <p><a class="btn btn-default" href="https://www.linkedin.com/in/jennaweaver10/">Learn more about Jenna &raquo;</a></p>
+        <p><a class="btn btn-info" href="https://www.linkedin.com/in/jennaweaver10/">Learn more about Jenna &raquo;</a></p>
     </div>
 </div>
