--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Jenna Weaver</title>
@@ -9,35 +10,47 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Jenna", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
 
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>
-                        @Html.ActionLink("Students", "Index", "Students")
-                    </li>
+    <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="color:black" >
+           
+            @Html.ActionLink("Jenna", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="#">@Html.ActionLink("About", "About", "Home")</a></li>
+            <li><a href="#">@Html.ActionLink("Contact", "Contact", "Home")</a></li>
+            
+            
+        </ul>
+        
+        
+    </div>
 
-                    <li>
-                        @Html.ActionLink("Classes", "Index", "Classes")
-                    </li>
 
-                    <li> @Html.ActionLink("Teachers", "Index", "Teachers")
-                    </li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
+
+
+
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+
+            <li>@Html.ActionLink("About", "About", "Home")</li>
+            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+            <li>
+                @Html.ActionLink("Students", "Index", "Students")
+            </li>
+
+            <li>
+                @Html.ActionLink("Classes", "Index", "Classes")
+            </li>
+
+            <li>
+                @Html.ActionLink("Teachers", "Index", "Teachers")
+            </li>
+        </ul>
+        @Html.Partial("_LoginPartial")
+    </div>
+    </div>
     </div>
     <div class="container body-content">
         @RenderBody()
